// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component should allow adding custom element 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  Hello
</Text>
`;

exports[`Badge Component should allow wrapper style 1`] = `
<View
  style={
    Array [
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge Component should apply container style in the badge 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge Component should apply text style in the badge 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          Object {
            "color": "orange",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge Component should pass value props should still work 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    >
      foo
    </Text>
  </View>
</View>
`;

exports[`Badge Component should render if element included 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      title="foo"
    />
  </View>
</View>
`;

exports[`Badge Component should render without issue 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 14,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge Component should show error if value and child are included 1`] = `
<View
  style={
    Array [
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#43484d",
          "borderRadius": 20,
          "justifyContent": "center",
          "padding": 12,
          "paddingBottom": 3,
          "paddingTop": 3,
        },
        undefined,
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
  </View>
</View>
`;
